src/pages/tableranking/tableRanking.scss
@import "src/assets/styles/variables";
@import "src/assets/styles/mixins";

.container-ranking {
  display: flex;
  justify-content: center;
}
.wapper-ranking {
  box-shadow: $box-shadow-bold;
  background-color: #4b4168 !important;
  border-radius: 10px;
  margin: $spacing-md;
  width: $width-post;
  max-width: $width-post;
}
.top-three {
  display: flex;
  justify-content: center;
  margin-top: 60px;
  align-items: flex-end;
  .one {
    max-width: 10rem;
    height: 11rem;
    padding-top: 3.5rem;

    .pic {
      width: 5rem;
      height: 5rem;
      left: 2.5rem;
    }
  }
}
.item-card {
  flex: 1;
  margin: 0;
  box-sizing: border-box;
  position: relative;
  background: white;
  width: 9rem;
  height: 10rem;
  text-align: center;
  padding: 2.8rem 0 0;
  margin: 1rem 1rem 2rem;
  border-radius: 0.5rem;
  transform-origin: bottom;
  cursor: pointer;
  transition: transform 200ms ease-in-out;
  box-shadow: 0 0 4rem 0 rgba(black, 0.1), 0 1rem 2rem -1rem rgba(black, 0.3);
  &:hover {
    transform: scale(1.05);
  }
  img {
    position: absolute;
    top: -2rem;
    left: 2.5rem;
    width: 4rem;
    height: 4rem;
    border-radius: 50%;
    background-size: cover;
    background-position: center;
    margin-right: 1rem;
    box-shadow: 0 0 1rem 0 rgba(black, 0.2),
      0 1rem 1rem -0.5rem rgba(black, 0.3);
  }
  .item-level {
    font-weight: 900;
    font-size: 1.5rem;
    margin-bottom: 0.1rem;
  }
  .name {
    font-size: 1.1rem;
    margin-bottom: 0.1rem;
  }
  .point {
    font-size: 0.8rem;
    opacity: 0.5;

    &:after {
      display: block;
      content: "điểm";
      opacity: 0.7;
    }
  }
}
.out-of-top-three {
  padding: 2rem;
  margin: 0 auto;
}
.item-list {
  position: relative;
  display: flex;
  align-items: center;
  background: white;
  height: 3rem;
  border-radius: 4rem;
  margin-bottom: 2rem;
  background: #eaa786;
  transform-origin: left;
  cursor: pointer;
  transition: transform 200ms ease-in-out;
  box-shadow: 0 0 4rem 0 rgba(black, 0.1), 0 1rem 2rem -1rem rgba(black, 0.3);
  .item-level {
    font-weight: 900;
    position: absolute;
    left: -1.5rem;
    text-align: center;
    font-size: 1.25rem;
    width: 1.5rem;
    color: white;
    opacity: 0.6;
    transition: opacity 200ms ease-in-out;
  }
  img {
    width: 4rem;
    height: 4rem;
    border-radius: 50%;
    background-size: cover;
    background-position: center;
    margin-right: 1rem;
    box-shadow: 0 0 1rem 0 rgba(black, 0.2),
      0 1rem 1rem -0.5rem rgba(black, 0.3);
  }
  .name {
    margin: 0;
    flex-grow: 2;
    flex-basis: 10rem;
    font-size: 1.1rem;
  }
  .point {
    margin-right: 1.5rem;
    opacity: 0.7;
    font-size: 16px;

    &:after {
      margin-right: 1rem;
      content: "Điểm";
      opacity: 0.8;
    }
  }
  &:hover {
    transform: scale(1.02);
    .pos {
      opacity: 0.8;
    }
  }
}

.instruction-point {
  margin-top: $spacing-md;
  background-color: $primary-white;
  box-shadow: $box-shadow-bold;
  height: fit-content;
  max-height: calc(100vh - 50px - 32px);
  overflow: scroll;
  width: 300px;
  max-width: 300px;
  overflow: scroll;
  &::-webkit-scrollbar {
    display: none;
  }
  padding: $spacing-md;
  border-radius: $border-radius-md;
  position: sticky !important;
  top: calc($spacing-md + 50px);
  h3 {
    font-size: 20px;
    font-weight: 600;
    color: $primary-color;
  }
  li {
    font-size: 18px;
  }
}

